srcs/manifests/ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps-service
  labels:
    app: ftps-app
spec:
  type: NodePort
  selector:
    app: ftps-app
  ports:
    - port: 21
      name: ftps
    - port: 21000
      name: ftps-data
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps-deployment
  labels:
    app: ftps-app
spec:
  selector:
    matchLabels:
      app: ftps-app
  template:
    metadata:
      labels:
        app: ftps-app
    spec:
      containers:
        - name: ftps
          image: ftps-container
          ports:
            - containerPort: 21
              hostPort: 21
            - containerPort: 21000
              hostPort: 21000
          imagePullPolicy: Never
          livenessProbe:
            tcpSocket:
              port: 21
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
