srcs/manifests/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  labels:
    app: grafana-app
spec:
  type: NodePort
  ports:
    - port: 3000
      nodePort: 3000
      protocol: TCP
      name: http
  selector:
    app: grafana-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      containers:
        - name: grafana
          image: grafana-container
          ports:
            - containerPort: 3000
          imagePullPolicy: Never
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
