srcs/manifests/telegraf_ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-service
  labels:
    app: telegraf-app
spec:
  type: NodePort
  ports:
    - port: 4999
      nodePort: 4999
      protocol: TCP
      name: http
  selector:
    app: telegraf-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-app
  template:
    metadata:
      labels:
        app: telegraf-app
    spec:
      containers:
        - name: telegraf
          image: telegraf-container
          ports:
            - containerPort: 4999
          imagePullPolicy: Never
          volumeMounts:
            - name: dockersock
              mountPath: "/var/run/docker.sock"
      volumes:
        - name: dockersock
          hostPath:
            path: /var/run/docker.sock
