srcs/manifests/wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress-app
spec:
  type: NodePort
  ports:
    - port: 5050
      nodePort: 5050
      protocol: TCP
      name: http
  selector:
    app: wordpress-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress-app
  template:
    metadata:
      labels:
        app: wordpress-app
    spec:
      containers:
        - name: wordpress
          image: wordpress-container
          ports:
            - containerPort: 5050
          imagePullPolicy: Never
